# creatur-dvector-wains

./: .gitignore  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  creatur-dvector-wains.cabal  default.nix  package.yaml  shell.nix  stack.yaml
src/ALife/Creatur/Wain/DVector/: Double.hs  ExamineAgent.hs  Object.hs  Pattern.hs  PatternDB.hs  Tweaker.hs  Util.hs  Wain.hs
test/: Main.hs  Spec.hs
test/ALife/Creatur/Wain/DVector/: DoubleQC.hs  PatternQC.hs
