name:           creatur-dvector-wains
version:        1.1.3
description:    Please see the README on GitHub at <https://github.com/githubuser/creatur-dvector-wains#readme>
homepage:       https://github.com/mhwombat/creatur-dvector-wains#readme
bug-reports:    https://github.com/mhwombat/creatur-dvector-wains/issues
author:         Amy de Buitléir
maintainer:     amy@nualeargais.ie
copyright:      2018-2019 Amy de Buitléir
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/mhwombat/creatur-dvector-wains

library
  exposed-modules:
      ALife.Creatur.Wain.DVector.Double
      ALife.Creatur.Wain.DVector.Object
      ALife.Creatur.Wain.DVector.Pattern
      ALife.Creatur.Wain.DVector.PatternDB
      ALife.Creatur.Wain.DVector.Tweaker
      ALife.Creatur.Wain.DVector.Util
      ALife.Creatur.Wain.DVector.Wain
  other-modules:
      Paths_creatur_dvector_wains
  hs-source-dirs:
      src
  ghc-options: -Wall -Werror
  build-depends:
      MonadRandom >= 0.5.1 && < 0.6
    , base >=4.7 && <5
    , cereal >= 0.5.7 && < 0.6
    , containers >= 0.5.7 && < 0.7
    , creatur >= 5.9.27 && < 5.10
    , creatur-wains >=9.5.5 && < 9.8
    , gray-extended >= 1.5.4 && < 1.6
    , lens >= 4.16 && < 4.18
    , mtl >= 2.2.2 && < 2.3
    , som >= 10.1.7 && < 10.2
    , split >= 0.2.3 && < 0.3
  default-language: Haskell2010

test-suite creatur-dvector-wains-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      ALife.Creatur.Wain.DVector.DoubleQC
      ALife.Creatur.Wain.DVector.PatternQC
      Paths_creatur_dvector_wains
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , creatur-dvector-wains
    , creatur-wains
    , creatur-wains-test-utils
    , numeric-tools
    , test-framework
    , test-framework-quickcheck2
  default-language: Haskell2010
