cabal-version:      2.4
name:               creatur-dvector-wains
version:            1.1.5
synopsis:           Wains that "see" vectors of type double.
description:
  Please see the README on GitHub at <https://github.com/mhwombat/creatur-dvector-wains#readme>
homepage:           https://github.com/mhwombat/creatur-dvector-wains#readme
bug-reports:        https://github.com/mhwombat/creatur-dvector-wains/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2018-2021 Amy de Buitléir
category:           AI
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/mhwombat/creatur-dvector-wains

common common-stuff
  default-language: Haskell2010
  build-depends:
    , base           >=4.7    && <5
    , creatur-genes  >= 1.0.0 && < 1.1

library
  import:          common-stuff
  hs-source-dirs:  src
  exposed-modules:
    ALife.Creatur.Wain.DVector.Double
    ALife.Creatur.Wain.DVector.Object
    ALife.Creatur.Wain.DVector.Pattern
    ALife.Creatur.Wain.DVector.PatternDB
    ALife.Creatur.Wain.DVector.Tweaker
    ALife.Creatur.Wain.DVector.Util
    ALife.Creatur.Wain.DVector.Wain
  other-modules:   Paths_creatur_dvector_wains
  autogen-modules: Paths_creatur_dvector_wains
  ghc-options:     -Wall -Wunused-packages -Werror
  build-depends:
    , cereal         ^>=0.5.7
    , creatur        ^>=5.9.30
    , creatur-wains  >=9.8  && <9.9
    , lens           >= 4.16 && < 4.20
    , MonadRandom    ^>=0.5.1
    , mtl            ^>=2.2.2
    , som            ^>=10.1.11
    , split          ^>=0.2.3

test-suite creatur-dvector-wains-test
  import:         common-stuff
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    ALife.Creatur.Wain.DVector.DoubleQC
    ALife.Creatur.Wain.DVector.PatternQC
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages -Werror
  build-depends:
    , creatur-dvector-wains
    , numeric-tools
    , QuickCheck
    , test-framework
    , test-framework-quickcheck2
