cabal-version:      2.4
name:               creatur-dvector-wains
version:            1.1.6
synopsis:           Wains that "see" vectors of type double.
description:
  Please see the README on GitHub at <https://github.com/mhwombat/creatur-dvector-wains#readme>
homepage:           https://github.com/mhwombat/creatur-dvector-wains#readme
bug-reports:        https://github.com/mhwombat/creatur-dvector-wains/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Amy de Buitléir
maintainer:         amy@nualeargais.ie
copyright:          2018-2022 Amy de Buitléir
category:           AI
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/mhwombat/creatur-dvector-wains

common common-stuff
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost
  build-depends:
    , base                  >= 4.7 && < 5
    , creatur-genes         >= 1.1.0 && < 1.2

library
  import:          common-stuff
  hs-source-dirs:  src
  exposed-modules:
    ALife.Creatur.Wain.DVector.Object
    ALife.Creatur.Wain.DVector.Pattern
    ALife.Creatur.Wain.DVector.PatternDB
    ALife.Creatur.Wain.DVector.Util
    ALife.Creatur.Wain.DVector.Wain
  other-modules:   Paths_creatur_dvector_wains
  autogen-modules: Paths_creatur_dvector_wains
  ghc-options:     -Wall -Wunused-packages -Werror
  build-depends:
    , cereal                >= 0.5.8 && < 0.6
    , creatur               >= 5.9.32 && < 5.10
    , creatur-wains         >= 11.0.0 && < 11.1
    , MonadRandom           >= 0.5.3 && < 0.6
    , mtl                   >= 2.2.2 && < 2.3
    , QuickCheck            >= 2.14.2 && < 2.15
    , som                   >= 11.0 && < 11.1
    , split                 >= 0.2.3 && < 0.3

test-suite creatur-dvector-wains-test
  import:         common-stuff
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    ALife.Creatur.Wain.DVector.PatternQC
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wunused-packages -Werror
  build-depends:
    , creatur-dvector-wains
    , numeric-tools
    , som
    , test-framework
    , test-framework-quickcheck2
    , quickcheck-with-counterexamples >= 1.2 && < 1.3
